...
    let oldPasswordSeparateLine = UIView(backgroundColor: #colorLiteral(red: 0.8, green: 0.8, blue: 0.8, alpha: 1))
    let newPasswordSeparateLine = UIView(backgroundColor: #colorLiteral(red: 0.8, green: 0.8, blue: 0.8, alpha: 1))
    let confirmPasswordSeparateLine = UIView(backgroundColor: #colorLiteral(red: 0.8, green: 0.8, blue: 0.8, alpha: 1))
    
    let imagePicker = UIImageView(cornerRadius: 50)
    
    let changePasswordButton = UIButton(title: "Change Password", color: #colorLiteral(red: 1, green: 0.5137254902, blue: 0.6274509804, alpha: 1), radius: 20, textColor: .white)
    let chooseImageButton = UIButton(title: "Choose Image", color: #colorLiteral(red: 0.1764705926, green: 0.4980392158, blue: 0.7568627596, alpha: 1), radius: 20, textColor: .white)
    let uploadImageButton = UIButton(title: "Upload Image", color: #colorLiteral(red: 1, green: 0.5137254902, blue: 0.6274509804, alpha: 1), radius: 20, textColor: .white)
    
    
    override func viewDidLoad() {
        super.viewDidLoad()
...
